--- a/styles.css
+++ b/styles.css
@@ -34,18 +34,20 @@ body{
 
 #ailergy{
     z-index: 1;
-    font-size: 4rem;
+    font-size: 5vh;
     margin-left: 10vw;
     opacity: 1;
 }
 
 #form-body{
     background-color: rgba(238, 238, 238, 0.692);
-    z-index: 1;
     width: 70vw;
     height: 100vh;
     position: absolute;
     margin-left: 30vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #text{
@@ -54,7 +56,7 @@ body{
     width: 50vw;
     height: 20vh;
     margin-left: 5vw;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 
 #form-body p{
@@ -63,19 +65,70 @@ body{
     line-height: 37px;
 }
 
-form{
+#form-container{
     height: 30vh;
     width: 70vw;
     background-color: rgba(255, 255, 255, 0.89);
-    position: absolute;
-    margin-top: 5vh;
-    padding: 2vh 0 2vh 5vw;
+    margin-top: 10vh;
+    padding: 2vh 20vw 2vh 5vw;
 }
 
-form h2{
-    font-size: 2rem;
+form{
+    height: 25vh;
+    width: 50vw;
+    display: flex;
+    flex-flow: column wrap;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+#text h2{
+    font-size: 18px;
     margin: 1vh;
 }
 
+#form-container h2{
+    margin: 0;
+    font-size: 18px;
+    color: rgb(8, 8, 8);
+}
 
+form input{
+    height: 3vh;
+    width: 20vw;
+    border-radius: 4px;
+    border-style: solid;
+    border-color: rgba(128, 128, 128, 0.767);
+    border-width: 1px;
+}
 
+form label{
+    margin-top: 14px;
+    color: rgb(68, 68, 68);
+}
+
+button{
+    width: 17vw;
+    height: 5vh;
+    background-color: rgb(56, 82, 56);
+    border: none;
+    border-radius: 5px;
+    color: wheat;
+    margin: 2vh;
+}
+
+#log-in{
+    margin-bottom: 8vh;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+
+#log-in p{
+    font-size: 1rem;
+}
+
+#log-in a{
+    color: rgb(56, 82, 56);
+}
