--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body{
 
 form{
     height: 25vh;
-    width: 50vw;
+    width: 40vw;
     display: flex;
     flex-flow: column wrap;
     flex-wrap: wrap;
@@ -96,11 +96,16 @@ form{
 
 form input{
     height: 3vh;
-    width: 20vw;
+    width: 16vw;
     border-radius: 4px;
     border-style: solid;
     border-color: rgba(128, 128, 128, 0.767);
     border-width: 1px;
+}
+
+form input:focus{
+    border-color: rgb(81, 81, 255);
+    background-color: rgba(111, 111, 255, 0.349);
 }
 
 form label{
@@ -109,13 +114,14 @@ form label{
 }
 
 button{
-    width: 17vw;
+    width: 14vw;
     height: 5vh;
     background-color: rgb(56, 82, 56);
     border: none;
     border-radius: 5px;
     color: wheat;
     margin: 2vh;
+    font-size: 2vh;
 }
 
 #log-in{
@@ -123,6 +129,7 @@ button{
     display: flex;
     align-items: center;
     justify-content: start;
+    margin-left: 2vh;
 }
 
 #log-in p{
